<resources>
    <string name="EXIT">EXIT</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_continue">Continue</string>
    <string name="action_copy">Copy link</string>
    <string name="action_ok">OK</string>
    <string name="action_open">Open</string>
    <string name="ad_consent_dialog_title">Welcome</string>
    <string name="ad_consent_tip">"The privacy policy is updated to adapt to the EU General Data Protection Regulation (GDPR). You can read it in #.

Please click \"Continue\" to agree to the policy and use all features of this product. Click \"I don't agree\" on # page if you don't want any personal data to be collected."</string>
    <string name="ad_continue">Continue</string>
    <string name="ad_later">Later</string>
    <string name="ad_privacy_policy">Privacy policy</string>
    <string name="ad_showing_ads">Showing ads</string>
    <string name="ad_tip">Tip</string>
    <string name="ad_update">Update</string>
    <string name="address">Address</string>
    <string name="album_permission_hint">Gallery permission is required to scan QR code/barcode in Gallery.</string>
    <string name="all_day">All day</string>
    <string name="allow">Allow</string>
    <string name="already_in_use">This name is already in use.</string>
    <string name="amazon">Amazon</string>
    <string name="amazon_shopping">View shop</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Scanner</string>
    <string name="app_version">Version %s</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="artist_name">Artist Name</string>
    <string name="at_userName">\@Username</string>
    <string name="auto_copied_to_clipboard">Auto-copied to clipboard</string>
    <string name="auto_copy">Auto-copied to clipboard</string>
    <string name="avoid_reflections">Avoid light &lt;b>reflections&lt;/b> or &lt;b>shadows&lt;/b> on the code</string>
    <string name="barcode_scan_fail_tip">If the scan fails, you could try to manually enter the barcode number to search.</string>
    <string name="batch">Batch</string>
    <string name="beep">Beep</string>
    <string name="beep_hint">Beep when the scan is successful</string>
    <string name="birthday">Birthday</string>
    <string name="book">Book</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="browse_from_gallery">Choose from gallery</string>
    <string name="btn_submit">Submit</string>
    <string name="button_add_calendar">Add to events</string>
    <string name="button_add_contact">Add to contacts</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_dial">Call</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Navigation</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_share">Share</string>
    <string name="button_show_map">Show on map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Google search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="calendar">Calendar</string>
    <string name="camera_permission_des">Camera permission is required to scan QR codes/barcodes.</string>
    <string name="camera_permission_hint">Allow %s to access Camera</string>
    <string name="camera_problem_restart">Sorry, the Android camera encountered a problem. Please check it, then restart the app.</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_connect_to_wifi_faq">"Can't connect to Wi-Fi?#
1. Make sure you are &lt;b>within the Wi-Fi coverage area&lt;/b>, and the Wi-Fi username and password are correct.

If you still can’t connect, please ask the QR code provider whether the password has been changed.

2. If the scan result is displayed as text, you need to &lt;b>manually connect to Wi-Fi&lt;/b> in your phone's network settings based on the Wi-Fi name and password provided in the text."</string>
    <string name="capture">Take a photo</string>
    <string name="cast_connecting">Connecting…</string>
    <string name="change_language_title">Language Options</string>
    <string name="channel_id">Channel ID</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_wifi">Choose the Wi-Fi to connect</string>
    <string name="clear_history">Clear history</string>
    <string name="clear_history_hint">Are your sure you want to clear this history?</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_share_option">1. Select the text in other apps and click the \"Share\" button</string>
    <string name="clipboard">Clipboard</string>
    <string name="close">Close</string>
    <string name="code">Code</string>
    <string name="code_cannot_be_read_faq" formatted="false">"Code can't be read?#
1. In order to get accurate scanning results, please make sure that the code meets the following characteristics:
\u0009\u0009a. rich contrast and &lt;b>not blurry&lt;/b>.
\u0009\u0009b. &lt;b>no light reflections or shadows&lt;/b> on the code.
\u0009\u0009c. &lt;b>complete&lt;/b>, with no missing parts.

2. If you are using a low-end phone, scanning may be very difficult or even impossible due to the low camera quality.

You could try to take a photo with your camera app, then open our app and tap 'Scan from the gallery' to solve this problem.

3. If you still can't get the result when scanning the barcode or QR code, please send an email via %sfeedback%s to us, we will solve the problem for you as soon as possible."</string>
    <string name="code_rich_in_contrast">Make sure your code is &lt;b>rich in contrast&lt;/b> and &lt;b>not tilted&lt;/b>.</string>
    <string name="com.crashlytics.android.build_id">c731fecf2dfa41e0ad2a17c2be153d2b</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="connect_to_wifi">Connect to Wi-Fi</string>
    <string name="connection_failed">Connection failed</string>
    <string name="contact">Contacts</string>
    <string name="content">Content</string>
    <string name="content_address">Address:</string>
    <string name="content_bcc">BCC:</string>
    <string name="content_birthday">Birthday:</string>
    <string name="content_body">Content:</string>
    <string name="content_cc">CC:</string>
    <string name="feedback">Feedback</string>
    <string name="no">No</string>
    <string name="open_settings">Open Settings</string>
    <string name="permission_required">Permission Required</string>
    <string name="qr_code_not_found">No QR code/barcode found</string>
    <string name="qr_code_not_found_hint">Make sure the QR code/barcode is clear and completely inside the frame</string>
    <string name="required_permission_1">1.Open Settings</string>
    <string name="required_permission_2">2.Tap Permissions</string>
    <string name="required_permission_turn_on_camera">3.Turn on Camera</string>
    <string name="required_permission_turn_on_storage">3.Turn on Storage</string>
    <string name="retry">Retry</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="roboto_regular">sans-serif</string>
    <string name="save">Save</string>
    <string name="tab_scan_title">Scanner</string>
    <string name="then_select_generate">2. Select \"%s\"</string>
    <string name="use_share">Use \"Share\" option to generate QR code</string>
    <string name="why_need_permissions">Why do we need permissions?</string>
    <string name="yes">Yes</string>
</resources>