<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" app:cardCornerRadius="6.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="18.0sp" android:textColor="#ff333333" android:gravity="center" android:background="#fff7f7f8" android:layout_width="fill_parent" android:layout_height="64.0dip" android:text="@string/permission_required" android:fontFamily="@string/roboto_medium" />
        <TextView android:textSize="15.0sp" android:textColor="#ff333333" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/album_permission_hint" android:alpha="0.6" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip" />
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip">
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/required_permission_1" android:fontFamily="@string/roboto_regular" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/required_permission_2" android:fontFamily="@string/roboto_regular" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/required_permission_turn_on_storage" android:fontFamily="@string/roboto_regular" />
        </LinearLayout>
        <TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/tv_positive" android:background="@drawable/bg_button_state_enable" android:layout_width="fill_parent" android:layout_height="46.0dip" android:layout_marginTop="30.0dip" android:text="@string/open_settings" android:fontFamily="@string/roboto_medium" android:layout_marginStart="30.0dip" android:layout_marginEnd="30.0dip" android:elevation="6.0dip" />
        <Space android:layout_width="fill_parent" android:layout_height="20.0dip" />
    </LinearLayout>
</androidx.cardview.widget.CardView>