<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:orientation="vertical" android:background="@drawable/ad_consent_dialog_background_dark" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="24.0dip">
        <TextView android:textSize="22.0sp" android:textColor="@color/ad_consent_dialog_title_color_dark" android:id="@id/ad_consent_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/ad_consent_dialog_title" android:fontFamily="@string/roboto_medium" />
        <TextView android:textSize="14.0sp" android:textColor="@color/ad_consent_dialog_message_color_dark" android:id="@id/ad_consent_tip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ad_consent_tip" android:fontFamily="@string/roboto_regular" />
        <Button android:textSize="20.0sp" android:textColor="@color/ad_consent_dialog_btn_text_color_dark" android:id="@id/ad_consent_continue_btn" android:background="@drawable/ad_consent_dialog_btn_background_dark" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginTop="36.0dip" android:text="@string/ad_continue" android:fontFamily="@string/roboto_medium" />
    </LinearLayout>
</FrameLayout>