<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="#ff000000" android:paddingBottom="@dimen/dp_48" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_top_bar" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:layout_constraintTop_toTopOf="parent">
        <TextView android:textSize="20.0sp" android:textColor="#ff031c36" android:gravity="start|center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/tab_scan_title" android:layout_weight="1.0" android:fontFamily="@string/roboto_medium" android:layout_marginStart="16.0dip" />
    </LinearLayout>
    <View android:id="@id/view_divider" android:background="@drawable/shape_divider_bottom" android:layout_width="fill_parent" android:layout_height="2.0dip" android:alpha="0.2" app:layout_constraintTop_toBottomOf="@id/ll_top_bar" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/info_layout" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toTopOf="@id/tv_open_setting" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/ll_top_bar">
        <TextView android:textSize="24.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/permission_required" android:fontFamily="@string/roboto_medium" />
        <TextView android:textSize="16.0sp" android:textColor="#ff757c87" android:gravity="center" android:id="@id/tv_hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20" android:fontFamily="@string/roboto_regular" app:layout_constraintWidth_percent="0.7" />
        <LinearLayout android:orientation="vertical" android:id="@id/ll_open_settings" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20">
            <TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="280.0dip" android:text="@string/required_permission_1" android:fontFamily="@string/roboto_medium" />
            <TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_8" android:maxWidth="280.0dip" android:text="@string/required_permission_2" android:fontFamily="@string/roboto_medium" />
            <TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_8" android:maxWidth="280.0dip" android:text="@string/required_permission_turn_on_camera" android:fontFamily="@string/roboto_medium" />
        </LinearLayout>
    </LinearLayout>
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:id="@id/tv_open_setting" android:background="@drawable/bg_ripple_corner_circle" android:layout_width="0.0dip" android:layout_height="@dimen/dp_52" android:layout_marginBottom="@dimen/dp_38" android:maxWidth="280.0dip" android:text="@string/open_settings" android:fontFamily="@string/roboto_regular" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintWidth_percent="0.8" />
    <androidx.constraintlayout.widget.Group android:id="@id/group_view" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:constraint_referenced_ids="tv_open_setting,info_layout" />
    <TextView android:textSize="@dimen/dp_22" android:textColor="#ffffffff" android:gravity="center" android:id="@id/tv_title_why" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/why_need_permissions" android:fontFamily="@string/roboto_medium" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/ll_top_bar" app:layout_constraintVertical_bias="0.38" />
    <TextView android:textSize="16.0sp" android:textColor="#ff757c87" android:gravity="center" android:id="@id/tv_hint_why" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_23" android:text="@string/camera_permission_des" android:fontFamily="@string/roboto_regular" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_title_why" app:layout_constraintWidth_percent="0.7" />
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:id="@id/tv_allow" android:background="@drawable/bg_ripple_corner_circle" android:layout_width="0.0dip" android:layout_height="@dimen/dp_42" android:layout_marginTop="@dimen/dp_34" android:maxWidth="280.0dip" android:text="@string/allow" android:fontFamily="@string/roboto_regular" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_hint_why" app:layout_constraintWidth_percent="0.8" />
    <androidx.constraintlayout.widget.Group android:id="@id/group_view_why" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:constraint_referenced_ids="tv_allow,tv_hint_why,tv_title_why" />
</androidx.constraintlayout.widget.ConstraintLayout>