<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/bg_dialog_bottom" android:padding="@dimen/dp_24" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_20" android:textColor="@color/dialog_text_first" android:gravity="center" android:id="@id/tv_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/permission_required" android:includeFontPadding="false" app:layout_constraintTop_toTopOf="parent" style="@style/FontBlack" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_15" android:textColor="@color/dialog_text_first" android:gravity="center" android:id="@id/tv_explain" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_18" android:text="@string/camera_permission_des" android:includeFontPadding="false" app:layout_constraintTop_toBottomOf="@id/tv_title" style="@style/FontRegular" />
    <LinearLayout android:gravity="center" android:id="@id/ll_step" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20" app:layout_constraintTop_toBottomOf="@id/tv_explain">
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_16" android:textColor="@color/dialog_text_first" android:gravity="center" android:id="@id/tv_step_1" android:padding="@dimen/dp_4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/required_permission_1" style="@style/FontRegular" />
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_16" android:textColor="@color/dialog_text_first" android:gravity="center" android:id="@id/tv_step_2" android:padding="@dimen/dp_4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/required_permission_2" style="@style/FontRegular" />
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_16" android:textColor="@color/dialog_text_first" android:gravity="center" android:id="@id/tv_step_3" android:padding="@dimen/dp_4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/required_permission_turn_on_camera" style="@style/FontRegular" />
        </LinearLayout>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_16" android:textColor="@color/themeColor" android:gravity="center" android:id="@id/tv_negative" android:background="@drawable/bg_stroke_corner_9" android:layout_width="0.0dip" android:layout_height="@dimen/dp_44" android:layout_marginTop="@dimen/dp_23" android:text="@string/button_cancel" android:layout_marginEnd="@dimen/dp_10" app:layout_constraintEnd_toStartOf="@id/tv_positive" app:layout_constraintHorizontal_weight="1.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/ll_step" style="@style/FontBlack" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_16" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_positive" android:background="@drawable/bg_ripple_corner_9" android:layout_width="0.0dip" android:layout_height="@dimen/dp_44" android:text="@string/open_settings" android:layout_marginStart="@dimen/dp_10" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_weight="1.0" app:layout_constraintStart_toEndOf="@id/tv_negative" app:layout_constraintTop_toTopOf="@id/tv_negative" style="@style/FontBlack" />
</androidx.constraintlayout.widget.ConstraintLayout>