<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" app:cardCornerRadius="6.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="18.0sp" android:textColor="#ff333333" android:gravity="center" android:background="#fff7f7f8" android:layout_width="fill_parent" android:layout_height="64.0dip" android:text="@string/qr_code_not_found" android:fontFamily="@string/roboto_medium" android:paddingStart="12.0dip" android:paddingEnd="12.0dip" />
        <TextView android:textSize="15.0sp" android:textColor="#ff333333" android:gravity="center" android:id="@id/tv_explain" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/qr_code_not_found_hint" android:alpha="0.6" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip" />
        <TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/tv_positive" android:background="@drawable/bg_button_state_enable" android:layout_width="fill_parent" android:layout_height="46.0dip" android:layout_marginTop="30.0dip" android:text="@string/retry" android:fontFamily="@string/roboto_medium" android:layout_marginStart="30.0dip" android:layout_marginEnd="30.0dip" android:elevation="6.0dip" />
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="46.0dip" android:layout_marginTop="8.0dip" android:layout_marginStart="30.0dip" android:layout_marginEnd="30.0dip">
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:id="@id/tv_negative" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/feedback" android:includeFontPadding="false" android:fontFamily="@string/roboto_medium" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <View android:background="#ff333333" android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_marginBottom="2.0dip" app:layout_constraintBottom_toBottomOf="@id/tv_negative" app:layout_constraintEnd_toEndOf="@id/tv_negative" app:layout_constraintStart_toStartOf="@id/tv_negative" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <Space android:layout_width="fill_parent" android:layout_height="20.0dip" />
    </LinearLayout>
</androidx.cardview.widget.CardView>