<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatButton android:textSize="18.0sp" android:textColor="@color/white" android:id="@id/btu_save" android:background="@drawable/shape_create_result_btu_bg_share" android:layout_width="0.0dip" android:layout_height="@dimen/dp_60" android:layout_marginTop="@dimen/dp_10" android:layout_marginBottom="@dimen/dp_10" android:text="@string/save" android:textAllCaps="false" android:fontFamily="@string/roboto_medium" android:layout_marginEnd="@dimen/dp_8" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/btu_share" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatButton android:textSize="18.0sp" android:textColor="@color/white" android:id="@id/btu_share" android:background="@drawable/shape_create_result_btu_bg_share" android:layout_width="0.0dip" android:layout_height="@dimen/dp_60" android:layout_marginTop="@dimen/dp_10" android:layout_marginBottom="@dimen/dp_10" android:text="@string/button_share" android:textAllCaps="false" android:fontFamily="@string/roboto_medium" android:layout_marginStart="@dimen/dp_8" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/btu_save" app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>